<resources>
    <string name="app_name">BluetoothLibrary</string>
    <string name="action_settings">Settings</string>

    <string name="time_search">Search time : %d ms</string>
    <string name="time_connecting">Connect time : %d ms</string>
    <string name="time_retry">Retry times : %d </string>
    <string name="time_service_discovering">Service discovering time : %d ms</string>

    <array name="bluetooth_library">
        <item>Lite Bluetooth</item>
        <item>Gizwits BLE</item>
    </array>
    
    <string name="action_search_thumb">Search Thumb</string>
    <string name="action_search_cadence">Search Cadence</string>
    <string name="action_search_meter">Search Meter</string>
    <string name="action_reset">Reset Device</string>

    <string name="status_searching">Searching...</string>
    <string name="status_connecting">Connecting...</string>
    <string name="status_connected">Connected</string>
    <string name="status_disconnect">Disconnected</string>
    <string name="status_fail">Failed</string>
    <string name="action_disconnect">Disconnect</string>

    <string name="test_times">Finished times:</string>

    <string name="cycle_test_times">Finished times: %d</string>
    <string name="cycle_test_fail_times">Fail times: %d</string>
    <string name="cycle_test_connect_success_rate">Connection Success Rate: %d</string>
    <string name="cycle_test_notify_success_rate">Notify Success Rate: %d</string>

    <string name="log_manufacture">Manufacture:</string>
    <string name="log_hardware">Hardware:</string>
    <string name="log_system_version">System version:</string>
    <string name="log_api_int">API:</string>
    
    <string name="params_advertising_interval">Advertising Interval(ms)</string>
    <string name="params_connect_interval_min">Connection Interval Min(ms)</string>
    <string name="params_connect_interval_max">Connection Interval Max(ms)</string>
    <string name="params_connect_timeout">Connection Timeout</string>
    <string name="params_commit">Launch!</string>

    <string name="off_host_title">Off Host Mode Test</string>
    <string name="off_host_start">Start</string>
    <string name="off_host_stop">Stop</string>
    <string name="off_host_distance_title">Distance: </string>


</resources>
